tools: use lazy arraylist allocation, replace apache commons-io fileutils with faster FileWalkers, remove apache commons-io dependency